# ic2d_urdf

./: CMakeLists.txt  README.md  package.xml
config/: ic2d_controllers.yaml
description/: ic2d.xacro  ic2d_position.xacro
launch/: ic2d_sim.launch.py  ic2d_sim_effort.launch.py  ic2d_sim_position.launch.py
meshes/: base_global.STL  cantoneira.STL  lateral_semunha.STL  linear_guide.STL  linear_rail.STL
src/: effort_controller.cpp  position_controller.cpp
world/: ic2d_simulation.world
